[metadata]
name = pymarkdown_link_check
version = 0.0.1
description = Markdown link checker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chriselion/pymarkdown-link-check
author = Chris Elion
author_email = celion@alumni.caltech.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = mdlink
install_requires =
    gevent>=1.4.0
    mistune>=0.8.4
    requests>=2.22.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pymarkdown-link-check = mdlink:main

[bdist_wheel]
universal = True

[flake8]
max-line-length=120

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
